# uiforms_demo

./: .gitignore  README.md
data/: customers.csv
db/: docker-compose.yml  script.sql
uiforms/: CMakeLists.txt  Main.qml  MainForm.ui.qml  main.cpp  mytablemodel.cpp  mytablemodel.h  person.cpp  person.h
uiforms/qml/: History.qml  HistoryForm.ui.qml  Notes.qml  NotesForm.ui.qml  Settings.qml  SettingsForm.ui.qml
